--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
              </video>
 
 
-             <p class="AnimeListt">🅰🅽🅸🅼🅴 🆃🆁🅰🅸🅻🅴🆁🆂</p>
+             <p class="AnimeListt">Anime Trailers</p>
 
 
 
