--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
              <img class="pic" src="logo/logoredflame.gif"/>
              <p class="anime2023">Upcoming Anime 2023</p>
              <video class="upcoming" autoplay loop muted>
-             <source src="IPT2Bautista/video/upcoming anime 2023.mp4">
+             <source src="video/upcoming anime 2023.mp4">
              </video>
 
 
