--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
 
              <img class="pic" src="logo/logoredflame.gif"/>
              <p class="anime2023">Upcoming Anime 2023</p>
-             <video class="upcoming" autoplay loop muted>
-             <source src="video/upcoming anime 2023.mp4">
-             </video>
+	     <img class="upcoming" src="background/list.gif"/>
+             
 
 
              <p class="AnimeListt">Anime Trailers</p>
