--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
              <img class="pic" src="logo/logoredflame.gif"/>
              <p class="anime2023">Upcoming Anime 2023</p>
-	     <img class="upcoming" src="background/list.gif"/>
+	     <img class="upcoming" src="background/list1.gif"/>
              
 
 
