--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
      </div>
 
              <img class="pic" src="logo/logoredflame.gif"/>
-             <p class="anime2023">Upcoming Anime 2023</p>
+             <p class="anime2023">𝔀𝓮𝓵𝓬𝓸𝓶𝓮 𝓽𝓸 𝓪𝓷𝓲𝓶𝓮 𝔀𝓸𝓻𝓵𝓭2023</p>
 	     <img class="upcoming" src="background/list1.gif"/>
              
 
