--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
      <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_3481419675412372.jpeg/>
+             <img class="vid" src="background/received_3481419675412372.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -55,7 +55,7 @@
 
      <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_9369239456434681.jpeg/>
+             <img class="vid" src="background/received_9369239456434681.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -66,7 +66,7 @@
 
      <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_629666262303531.jpeg/>
+             <img class="vid" src="background/received_629666262303531.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -77,7 +77,7 @@
 
      <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_972022357490225.jpeg/>
+             <img class="vid" src="background/received_972022357490225.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -88,7 +88,7 @@
 
      <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_6604195156277123.jpeg/>
+             <img class="vid" src="background/received_6604195156277123.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -99,7 +99,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_1468601737006243.jpeg/>
+             <img class="vid" src="background/received_1468601737006243.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -110,7 +110,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_1454941785035330.jpeg/>
+             <img class="vid" src="background/received_1454941785035330.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -121,7 +121,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_165985872921535.jpeg/>
+             <img class="vid" src="background/received_165985872921535.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -132,7 +132,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_3470420276618378.jpeg/>
+             <img class="vid" src="background/received_3470420276618378.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -143,7 +143,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_607676217895776.jpeg/>
+             <img class="vid" src="background/received_607676217895776.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -154,7 +154,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_243338254709553.jpeg/>
+             <img class="vid" src="background/received_243338254709553.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -165,7 +165,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/receive_1170437756986637.jpeg/>
+             <img class="vid" src="background/receive_1170437756986637.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -176,7 +176,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_5999056703496055.jpeg/>
+             <img class="vid" src="background/received_5999056703496055.jpeg"/>
      </div>
 
      <div class="flex-item-right">
@@ -187,7 +187,7 @@
 	 
 	 <div class="flex-container">
      <div class="flex-item-left">
-             <img class="vid" src="background/received_505034841840151.jpeg/>
+             <img class="vid" src="background/received_505034841840151.jpeg"/>
      </div>
      <div class="flex-item-right">
              <h1 class="hed">Left Hand Lay up</h1> <p class="para">The play stars Xu Xing Ze, a passionate basketball player, tells a youthful story about love and the growth of Chinese teens. a high schooler named Xu Xingze who aspires to be a great basketball player. He appears to be a left-handed rookie with remarkable speed.</p>
