--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
              
 
 
-             <p class="AnimeListt">Anime Trailers</p>
+             <p class="AnimeList">Anime Trailers</p>
 
 
 
